[package]
name = "age-plugin-xwing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age-core = "0.10.0"
age-plugin = "0.5.0"
base64 = "0.21.7"
bech32 = "0.9.1"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
xwing-kem = { path = "xwing-kem.rs" }
