[package]
name = "age-plugin-xwing"
description = "X-Wing plugin for age clients"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Rixxc/age-plugin-xwing"
readme = "README.md"
keywords = ["x-wing", "age", "cli", "cryptography", "encryption"]
categories = ["command-line-utilities", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age-core = "0.11.0"
age-plugin = "0.6.0"
base64 = "0.22.1"
clap = { version = "4.5.1", features = ["derive"] }
x-wing = { version = "0.0.1-pre.1", features = ["getrandom", "zeroize"] }
rand_core = "0.6.4"
kem = "0.3.0-pre.0"
